[package]
name = "stylus_arenaton_engine"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus Arenaton Engine Stylus Smart Contract"

[dependencies]
# stylus-sdk = "0.6.0"

stylus-sdk = { version = "=0.7.0-beta.0", default-features = false }
hex = "0.4.3"
dotenv = "0.15.0"
alloy-primitives = { version = "0.8.13", default-features = false }
alloy-sol-types = { version = "0.8.13", default-features = false }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-arenaton"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
