[package]
name = "stylus_core_events"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus Arenaton Engine Stylus Smart Contract"

[dependencies]
stylus-sdk = { version = "0.7.0", default-features = false, features = ["mini-alloc"] }
hex = "0.4.3"
dotenv = "0.15.0"
alloy-sol-types = { version = "=0.8.14", default-features = false }
motsu = "0.3.0"

[[bin]]
name = "stylus_core_events"
path = "src/main.rs"

[dev-dependencies]
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds